--- a/sw/media/css/base.scss
+++ b/sw/media/css/base.scss
@@ -42,6 +42,7 @@ $color-c: #e64d00;
 @include icon-link-image("bullet_blue");
 @include icon-link-image("bullet_go");
 @include icon-link-image("bullet_yellow");
+@include icon-link-image("calendar");
 @include icon-link-image("door_in");
 @include icon-link-image("email_edit");
 @include icon-link-image("eye");
