--- a/sw/templates/dregni/event_summary.html
+++ b/sw/templates/dregni/event_summary.html
@@ -16,6 +16,6 @@
                 {{ event.end_time }}
             {% endif %}
         {% endif %}
-    </span>
+    </div>
     <div class="title"><a href="{{ event.get_absolute_url }}">{{ event.title }}</a></span>
 </div>
