--- a/sw/templates/dregni/event.html
+++ b/sw/templates/dregni/event.html
@@ -46,9 +46,9 @@
 
 
 {% block sidebar_sections %}
-    {% if group and user|iscoordinatorofteam:group %}
+    {% if group.is_private and user|ismemberofgroup:group or user|iscoordinatorofteam:group %}
         <div class="section">
-            <h1>Coordinators</h1>
+            <h1>Actions</h1>
 
             <ul>
                 <li><a href="{% groupurl dregni_event_edit group event_id=event.id %}">Edit this event</a></li>
