Correct closing tag.

--- a/sw/templates/dregni/event_summary.html
+++ b/sw/templates/dregni/event_summary.html
@@ -17,5 +17,5 @@
             {% endif %}
         {% endif %}
     </div>
-    <div class="title"><a href="{{ event.get_absolute_url }}">{{ event.title }}</a></span>
+    <div class="title"><a href="{{ event.get_absolute_url }}">{{ event.title }}</a></div>
 </div>
