--- a/sw/templates/teams/team.html
+++ b/sw/templates/teams/team.html
@@ -4,7 +4,7 @@
 {% load events %}
 {% load feature_tag %}
 {% load group_tags %}
-{% load pagination_tags %}
+{% load sw_tags %}
 {% load team_tags %}
 
 {% block head_title %}{{ group.name }}{% endblock %}
@@ -35,15 +35,17 @@
         <div class="grid_4 alpha">
             <h1>Recent activity</h1>
 
-            {% autopaginate team_actions %}
-
-            <ul class="stream">
-                {% for action in team_actions %}
-                    <li class="event">
-                        {% include "activity/action.html" %}
-                    </li>
-                {% endfor %}
-            </ul>
+            {% with group|teamactions:5 as recent_actions %}
+                {% if recent_actions %}
+                    <ul class="stream">
+                        {% for action in recent_actions %}
+                            <li class="event">
+                                {% include "activity/action.html" %}
+                            </li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+            {% endwith %}
 
             {% paginate %}
         </div>
