Add a view/template combo to paginate through a team's activity history.

--- a/sw/templates/teams/team.html
+++ b/sw/templates/teams/team.html
@@ -47,7 +47,7 @@
                 {% endif %}
             {% endwith %}
 
-            {% paginate %}
+            <p><a href="{% url team_activity_history slug=group.slug %}"><strong>Activity history »</strong></a></p>
         </div>
 
         <div class="grid_4 omega">
