Highlight hq section when inside a team's resources.

--- a/sw/templates/idios/base.html
+++ b/sw/templates/idios/base.html
@@ -5,7 +5,7 @@
 
 {% block page_title %}{% block head_title %}{% endblock %}{% endblock %}
 
-{% block body_class %}{{ block.super }} profile{% endblock %}
+{% block body_class %}{{ block.super }} profile hq-section{% endblock %}
 
 {% block breadcrumbs %}
     {{ block.super }}
