--- a/sw/templates/idios/profiles.html
+++ b/sw/templates/idios/profiles.html
@@ -2,15 +2,65 @@
 
 {% load breadcrumbs feature_tag %}
 {% load i18n %}
+{% load pagination_tags %}
+{% load sw_tags %}
 
 {% block head_title %}{% trans "All Profiles" %}{% endblock %}
 
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb_css 'icon-link vcard-link' 'All Profiles' %}
 {% endblock %}
 
 
 {% block body %}
-    <p>{% trans "The full list of profiles is not available." %}</p>
+
+
+    {% if order == 'date' %}
+        <h1><strong>All members</strong>, sorted by date joined</h1>
+        <p><a href="?order=name">Sort by name</a></p>
+    {% else %}
+        <h1><strong>All members</strong>, sorted by name</h1>
+        <p><a href="?order=date">Sort by date joined</a></p>
+    {% endif %}
+
+    {% autopaginate profiles %}
+
+    <table width="100%">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Profile Summary</th>
+                <th>Joined</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for profile in profiles %}
+                {% with profile.user as otheruser %}
+                    <tr>
+                        <td width="20%">
+                            <a href="{{ otheruser.get_absolute_url }}">{{ profile }}</a>
+                        </td>
+                        <td>
+                            {% if user|canview_bio_ofuser:otheruser %}
+                                {% with profile.bio as bio %}
+                                    {% if bio %}
+                                        <div>
+                                            <strong>Bio</strong>: {{ otheruser.get_profile.bio|truncatewords:25 }}
+                                            <a href="{{ otheruser.get_absolute_url }}">(read more)</a>
+                                        </div>
+                                    {% endif %}
+                                {% endwith %}
+                            {% endif %}
+                        </td>
+                        <td width="20%">
+                            {{ otheruser.date_joined|timesince }} ago
+                        </td>
+                    </tr>
+                {% endwith %}
+            {% endfor %}
+        </tbody>
+    </table>
+
+    {% paginate %}
+
 {% endblock %}
