--- a/sw/templates/base.html
+++ b/sw/templates/base.html
@@ -1,5 +1,5 @@
 {% load cms_tags feature_tag %}
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>{% block page_title %}Welcome{% endblock %} - Sensible Washington</title>
