--- a/sw/templates/base.html
+++ b/sw/templates/base.html
@@ -66,11 +66,13 @@
 <div class="header grid_12 alpha omega">
     <h1><a href="{% block logo_url %}/{% endblock %}">sensiblewashington.org</a></h1>
     <h2>{% block header_slogan %}Legalize Cannabis<br/>in 2011{% endblock %}</h2>
-    <div id="site-search">
-        <form action="/search/" method="get">
-            <input name="q" type="search" id="search_q">
-        </form>
-    </div>
+    {% feature site_search %}
+        <div id="site-search">
+            <form action="/search/" method="get">
+                <input name="q" type="search" id="search_q">
+            </form>
+        </div>
+    {% endfeature %}
     <div id="follow-campaign">
         Follow the campaign:
         <ul>
